# my-fastapi

./: .gitignore  CLAUDE.md  INITIAL.md  PLANNING.md  TASK.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: deploy-dev.yml  deploy-prod.yml
PRPs/: user-management-api.md
backend/: .dockerignore  .env.example  DEVELOPER_GUIDE.md  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  post.py  user.py
backend/app/routers/: __init__.py  auth.py  files.py  post.py  users.py
backend/app/schemas/: __init__.py  auth.py  post.py  user.py
backend/app/utils/: __init__.py  jwt.py  security.py
backend/tests/: conftest.py  test_users.py
